--- a/src/webparts/quickStart/QuickStartWebPart.manifest.json
+++ b/src/webparts/quickStart/QuickStartWebPart.manifest.json
@@ -22,7 +22,8 @@
     "description": { "default": "QuickStart description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "QuickStart"
+      "description": "QuickStart",
+      "logLevel":3
     }
   }]
 }
