--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.28.0",
     "gulp": "~4.0.2",
     "gulp-eslint-new": "^1.3.0",
-    "spfx-fast-serve-helpers": "~1.13.0"
+    "spfx-fast-serve-helpers": "~1.13.0",
+    "typescript": "^3.9.0"
   }
 }
